--- a/lydia.html
+++ b/lydia.html
@@ -110,7 +110,7 @@
 
     <section class="grid" aria-label="Subject list">
       <a class="subject" href="https://missk527.github.io/minrhetoric-game/" target="_blank" rel="noopener">English</a>
-      <a class="subject" href="https://missk527.github.io/eng/12we.html" target="_blank" rel="noopener">English Writing</a>
+      <a class="subject" href="https://missk527.github.io/eng/13we.html" target="_blank" rel="noopener">English Writing</a>
             <a class="subject" href="https://missk527.github.io/gcse/eng.html" target="_blank" rel="noopener">交英文writing</a>
       <a class="subject" href="https://missk527.github.io/gcse/tran.html" target="_blank" rel="noopener">English grammar</a>
       <a class="subject" href="https://missk527.github.io/Y11/bioflashcard.html" target="_blank" rel="noopener">Biology Flashcard</a>
@@ -119,11 +119,11 @@
       <a class="subject" href="https://missk527.github.io/Y11/chemquiz.html" target="_blank" rel="noopener">Chemistry Quiz</a>
         <a class="subject" href="https://missk527.github.io/Y11/phyflashcard.html" target="_blank" rel="noopener">Physics Flashcard</a>
       <a class="subject" href="https://missk527.github.io/Y11/phymcquiz.html" target="_blank" rel="noopener">Physics Quiz</a>
-       <a class="subject" href="https://missk527.github.io/bio/57i.html" target="_blank" rel="noopener">Biology</a>
-      <a class="subject" href="https://missk527.github.io/chem/50h.html" target="_blank" rel="noopener">Chemistry</a>
-      <a class="subject" href="https://missk527.github.io/phy/56n.html" target="_blank" rel="noopener">Physic</a>
+       <a class="subject" href="https://missk527.github.io/bio/58ba.html" target="_blank" rel="noopener">Biology</a>
+      <a class="subject" href="https://missk527.github.io/chem/51ap.html" target="_blank" rel="noopener">Chemistry</a>
+      <a class="subject" href="https://missk527.github.io/phy/57nt.html" target="_blank" rel="noopener">Physic</a>
       <a class="subject" href="https://missk527.github.io/math/y912.html" target="_blank" rel="noopener">Mathematics</a>
-         <a class="subject" href="https://missk527.github.io/englit/es.html" target="_blank" rel="noopener">Christmas Carol</a>
+         <a class="subject" href="https://missk527.github.io/englit/fe.html" target="_blank" rel="noopener">Christmas Carol</a>
     </section>
   </main>
 </body>
