--- a/jasper.html
+++ b/jasper.html
@@ -110,7 +110,7 @@
 
     <section class="grid" aria-label="Subject list">
       <a class="subject" href="https://missk527.github.io/minrhetoric-game/" target="_blank" rel="noopener">English</a>
-      <a class="subject" href="https://missk527.github.io/eng/13we.html" target="_blank" rel="noopener">English Writing</a>
+      <a class="subject" href="https://missk527.github.io/eng/14we.html" target="_blank" rel="noopener">English Writing</a>
             <a class="subject" href="https://missk527.github.io/gcse/eng.html" target="_blank" rel="noopener">交英文writing</a>
        <a class="subject" href="https://missk527.github.io/gcse/tran.html" target="_blank" rel="noopener">English grammar</a>
       <a class="subject" href="https://missk527.github.io/Y11/bioflashcard.html" target="_blank" rel="noopener">Biology Flashcard</a>
@@ -120,11 +120,11 @@
       <!-- Added extra subjects -->
         <a class="subject" href="https://missk527.github.io/Y11/phyflashcard.html" target="_blank" rel="noopener">Physics Flashcard</a>
       <a class="subject" href="https://missk527.github.io/Y11/phymcquiz.html" target="_blank" rel="noopener">Physics Quiz</a>
-      <a class="subject" href="https://missk527.github.io/math/y912.html" target="_blank" rel="noopener">Mathematics</a>
-      <a class="subject" href="https://missk527.github.io/bio/58ba.html" target="_blank" rel="noopener">Biology 1</a>
-         <a class="subject" href="https://missk527.github.io/bio/27v.html" target="_blank" rel="noopener">Biology 2</a>
-        <a class="subject" href="https://missk527.github.io/chem/51ap.html" target="_blank" rel="noopener">Chemistry</a>
-       <a class="subject" href="https://missk527.github.io/phy/57nt.html" target="_blank" rel="noopener">Physics</a>
+      <a class="subject" href="https://missk527.github.io/math/y914.html" target="_blank" rel="noopener">Mathematics</a>
+      <a class="subject" href="https://missk527.github.io/bio/59cm.html" target="_blank" rel="noopener">Biology 1</a>
+         <a class="subject" href="https://missk527.github.io/bio/28ad.html" target="_blank" rel="noopener">Biology 2</a>
+        <a class="subject" href="https://missk527.github.io/chem/52c.html" target="_blank" rel="noopener">Chemistry</a>
+       <a class="subject" href="https://missk527.github.io/phy/58sd.html" target="_blank" rel="noopener">Physics</a>
         <a class="subject" href="https://missk527.github.io/englit/macbethflash.html" target="_blank" rel="noopener">Englit: Macbeth flashcard</a>
       <a class="subject" href="https://missk527.github.io/englit/maclang.html" target="_blank" rel="noopener">Englit: Macbeth Language</a>
         <a class="subject" href="https://missk527.github.io/englit/rem.html" target="_blank" rel="noopener">IGCSE englit</a>
