--- a/isaac.html
+++ b/isaac.html
@@ -110,7 +110,7 @@
 
     <section class="grid" aria-label="Subject list">
       <a class="subject" href="https://missk527.github.io/minrhetoric-game/" target="_blank" rel="noopener">English</a>
-      <a class="subject" href="https://missk527.github.io/eng/14we.html" target="_blank" rel="noopener">English Writing</a>
+      <a class="subject" href="https://missk527.github.io/eng/16e.html" target="_blank" rel="noopener">English Writing</a>
             <a class="subject" href="https://missk527.github.io/gcse/eng.html" target="_blank" rel="noopener">交英文writing</a>
        <a class="subject" href="https://missk527.github.io/gcse/tran.html" target="_blank" rel="noopener">English grammar</a>
       <a class="subject" href="https://missk527.github.io/Y11/bioflashcard.html" target="_blank" rel="noopener">Biology Flashcard</a>
@@ -122,7 +122,7 @@
       <a class="subject" href="https://missk527.github.io/bio/55ar.html" target="_blank" rel="noopener">Biology</a>
       <a class="subject" href="https://missk527.github.io/chem/48cr.html" target="_blank" rel="noopener">Chemistry</a>
       <a class="subject" href="https://missk527.github.io/phy/54vt.html" target="_blank" rel="noopener">Physic</a>
-      <a class="subject" href="https://missk527.github.io/math/y915.html" target="_blank" rel="noopener">Mathematics</a>
+      <a class="subject" href="https://missk527.github.io/math/y717.html" target="_blank" rel="noopener">Mathematics</a>
     </section>
   </main>
 </body>
