--- a/jasper.html
+++ b/jasper.html
@@ -123,7 +123,7 @@
       <a class="subject" href="https://missk527.github.io/math/y915.html" target="_blank" rel="noopener">Mathematics</a>
       <a class="subject" href="https://missk527.github.io/bio/60fc.html" target="_blank" rel="noopener">Biology 1</a>
          <a class="subject" href="https://missk527.github.io/bio/30d.html" target="_blank" rel="noopener">Biology 2</a>
-        <a class="subject" href="https://missk527.github.io/chem/54ar.html" target="_blank" rel="noopener">Chemistry</a>
+        <a class="subject" href="https://missk527.github.io/chem/55p.html" target="_blank" rel="noopener">Chemistry</a>
        <a class="subject" href="https://missk527.github.io/phy/60m.html" target="_blank" rel="noopener">Physics</a>
         <a class="subject" href="https://missk527.github.io/englit/macbethflash.html" target="_blank" rel="noopener">Englit: Macbeth flashcard</a>
       <a class="subject" href="https://missk527.github.io/englit/maclang.html" target="_blank" rel="noopener">Englit: Macbeth Language</a>
