--- a/lydia.html
+++ b/lydia.html
@@ -119,9 +119,9 @@
       <a class="subject" href="https://missk527.github.io/Y11/chemquiz.html" target="_blank" rel="noopener">Chemistry Quiz</a>
         <a class="subject" href="https://missk527.github.io/Y11/phyflashcard.html" target="_blank" rel="noopener">Physics Flashcard</a>
       <a class="subject" href="https://missk527.github.io/Y11/phymcquiz.html" target="_blank" rel="noopener">Physics Quiz</a>
-       <a class="subject" href="https://missk527.github.io/bio/61cc.html" target="_blank" rel="noopener">Biology</a>
-      <a class="subject" href="https://missk527.github.io/chem/54ar.html" target="_blank" rel="noopener">Chemistry</a>
-      <a class="subject" href="https://missk527.github.io/phy/60m.html" target="_blank" rel="noopener">Physic</a>
+       <a class="subject" href="https://missk527.github.io/bio/62r.html" target="_blank" rel="noopener">Biology</a>
+      <a class="subject" href="https://missk527.github.io/chem/55p.html" target="_blank" rel="noopener">Chemistry</a>
+      <a class="subject" href="https://missk527.github.io/phy/61t.html" target="_blank" rel="noopener">Physic</a>
       <a class="subject" href="https://missk527.github.io/math/y717.html" target="_blank" rel="noopener">Mathematics</a>
          <a class="subject" href="https://missk527.github.io/englit/mcc.html" target="_blank" rel="noopener">Christmas Carol</a>
     </section>
