--- a/isaac.html
+++ b/isaac.html
@@ -119,9 +119,9 @@
       <a class="subject" href="https://missk527.github.io/Y11/chemquiz.html" target="_blank" rel="noopener">Chemistry Quiz</a>
         <a class="subject" href="https://missk527.github.io/Y11/phyflashcard.html" target="_blank" rel="noopener">Physics Flashcard</a>
       <a class="subject" href="https://missk527.github.io/Y11/phymcquiz.html" target="_blank" rel="noopener">Physics Quiz</a>
-      <a class="subject" href="https://missk527.github.io/bio/55ar.html" target="_blank" rel="noopener">Biology</a>
-      <a class="subject" href="https://missk527.github.io/chem/48cr.html" target="_blank" rel="noopener">Chemistry</a>
-      <a class="subject" href="https://missk527.github.io/phy/54vt.html" target="_blank" rel="noopener">Physic</a>
+      <a class="subject" href="https://missk527.github.io/bio/56c.html" target="_blank" rel="noopener">Biology</a>
+      <a class="subject" href="https://missk527.github.io/chem/49lc.html" target="_blank" rel="noopener">Chemistry</a>
+      <a class="subject" href="https://missk527.github.io/phy/55tv.html" target="_blank" rel="noopener">Physic</a>
       <a class="subject" href="https://missk527.github.io/math/y717.html" target="_blank" rel="noopener">Mathematics</a>
     </section>
   </main>
