--- a/isaac.html
+++ b/isaac.html
@@ -120,8 +120,8 @@
         <a class="subject" href="https://missk527.github.io/Y11/phyflashcard.html" target="_blank" rel="noopener">Physics Flashcard</a>
       <a class="subject" href="https://missk527.github.io/Y11/phymcquiz.html" target="_blank" rel="noopener">Physics Quiz</a>
       <a class="subject" href="https://missk527.github.io/bio/57i.html" target="_blank" rel="noopener">Biology</a>
-      <a class="subject" href="https://missk527.github.io/chem/49lc.html" target="_blank" rel="noopener">Chemistry</a>
-      <a class="subject" href="https://missk527.github.io/phy/55tv.html" target="_blank" rel="noopener">Physic</a>
+      <a class="subject" href="https://missk527.github.io/chem/50ap.html" target="_blank" rel="noopener">Chemistry</a>
+      <a class="subject" href="https://missk527.github.io/phy/56n.html" target="_blank" rel="noopener">Physic</a>
       <a class="subject" href="https://missk527.github.io/math/y717.html" target="_blank" rel="noopener">Mathematics</a>
     </section>
   </main>
